--- a/water-flood-problem-server/views/index.html
+++ b/water-flood-problem-server/views/index.html
@@ -15,7 +15,7 @@
     </style>
     <!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>-->
     <script type="text/javascript"
-	     src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true">
+	     src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true" >
 		 
       // true_or_false
     </script>
@@ -89,101 +89,7 @@ function initialize() {
 	};
 	var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 	
-	$.ajax({
-        url : GET_ALL_DATES_URL,
-        type : 'get',
-        //dataType : 'json',//or json
-		//data: 
-        //timeout : 5000,
-        //cache : false,
-        //async : true,
-        success : function(data) { 
-      			dates = data;       
-				
-            /*dates =  [
-                  // requested date                         real date of measurement
-                    ["4/4/15"],  
-                    ["5/4/15"] 
-                  ];*/
-            
-				
-            // TODO : colors
-           var gradient = [
-
-		'rgba(255, 0, 0, 0)',
-		'rgba(255, 0, 0, 0.3)',
-		'rgba(255, 5, 0, 0.3)',
-		'rgba(255, 165, 0, 0.2)',
-		'rgba(255, 185, 15, 0.2)',
-		'rgba(0, 105, 255, 0.7)',
-		'rgba(0, 0, 255, 1)' 
-
-            ];
-            heatmap = new google.maps.visualization.HeatmapLayer({
-                gradient: gradient,
-			    
-                radius: 80,
-                maxIntensity: 100
-                //dissipating: false
-              });
-			  
-              
-              var slideBarControl = document.createElement('input');
-            
-              // var slideBar = new SlideBarControl(slideBarControl, map, dates);
-              new SlideBarControl(slideBarControl, map, dates);
-
-              slideBarControl.index = 1;
-              map.controls[google.maps.ControlPosition.BOTTOM_CENTER].push(slideBarControl);
-            
-              var textControlDiv = document.createElement('div');
-              var textControl = new TextControl(textControlDiv, map);
-            
-              textControlDiv.index = 2;
-              map.controls[google.maps.ControlPosition.BOTTOM_CENTER].push(textControlDiv);
-              
-              $.ajax({
-                  url : GET_ALL_MEASUREMENTS_URL,
-                  type : 'get',
-                  dataType : 'json',//or json
-              data: dates,
-                  //timeout : 5000,
-                  //cache : false,
-                  //async : true,
-                  success : function(data) { 
-                          result = data; 
-                           console.log('res from server', result);
-
-
-                            /*
-                            result =  [
-                                // requested date                         real date of measurement
-                                  ["4/4/15" , 100, 42.5047926,  27.4626361, "4/4/15", "nqkva danna 29"],  
-                                  ["5/4/15" , 100, 42.5047926,  27.4626361, "4/4/15", "nqkva danna 30"] 
-                                ];*/
-                          
-                          
-                          /// --- comment was from here
-                          fillMap(result, map, dates);
-                          var d = dates[0].split('/'); // dates[0][0]
-                          controlText.innerHTML = d[0] + "." + d[1] + "." + d[2];
-                          
-                          setHeatmap(map,heatmap, heatmapdata[0]);
-                          heatmap.setMap(map);
-                          //clearMarkers();
-
-                  },
-                  error : function(msg, cause) {
-                      console.log(msg);
-                  }
-              });
-    
- 
-        },
-        error : function(msg, cause) {
-			     console.log(msg);
-        }
-    });
+	/////
 	
 	geolocator(map);
 
@@ -373,6 +279,117 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
 
+	<button pins = "setPins()" style="position:absolute; z-index:1;right: 30px; top: 100px; width: 100px; height: 100px;" >
+		<img src="pins2.png" />
+		view pins on map
+	</button>
+	
+	<button predict = "setSlideBar()" style="position:absolute; z-index:1;right: 30px; top: 240px; width: 100px; height: 100px;" >
+		<img src="predict.jpg" />
+		predict
+	</button>
+
+  <script>
+    function setPins() {
+	
+		$.ajax({
+        url : GET_ALL_DATES_URL,
+        type : 'get',
+        //dataType : 'json',//or json
+		//data: 
+        //timeout : 5000,
+        //cache : false,
+        //async : true,
+        success : function(data) { 
+      			dates = data;       
+				
+            /*dates =  [
+                  // requested date                         real date of measurement
+                    ["4/4/15"],  
+                    ["5/4/15"] 
+                  ];*/
+            
+				
+            // TODO : colors
+           var gradient = [
+
+		'rgba(255, 0, 0, 0)',
+		'rgba(255, 0, 0, 0.3)',
+		'rgba(255, 5, 0, 0.3)',
+		'rgba(255, 165, 0, 0.2)',
+		'rgba(255, 185, 15, 0.2)',
+		'rgba(0, 105, 255, 0.7)',
+		'rgba(0, 0, 255, 1)' 
+
+            ];
+            heatmap = new google.maps.visualization.HeatmapLayer({
+                gradient: gradient,
+			    
+                radius: 80,
+                maxIntensity: 100
+                //dissipating: false
+              });
+			  
+              
+              var slideBarControl = document.createElement('input');
+            
+              // var slideBar = new SlideBarControl(slideBarControl, map, dates);
+              new SlideBarControl(slideBarControl, map, dates);
+
+              slideBarControl.index = 1;
+              map.controls[google.maps.ControlPosition.BOTTOM_CENTER].push(slideBarControl);
+            
+              var textControlDiv = document.createElement('div');
+              var textControl = new TextControl(textControlDiv, map);
+            
+              textControlDiv.index = 2;
+              map.controls[google.maps.ControlPosition.BOTTOM_CENTER].push(textControlDiv);
+              
+              $.ajax({
+                  url : GET_ALL_MEASUREMENTS_URL,
+                  type : 'get',
+                  dataType : 'json',//or json
+              data: dates,
+                  //timeout : 5000,
+                  //cache : false,
+                  //async : true,
+                  success : function(data) { 
+                          result = data; 
+                           console.log('res from server', result);
+
+
+                            /*
+                            result =  [
+                                // requested date                         real date of measurement
+                                  ["4/4/15" , 100, 42.5047926,  27.4626361, "4/4/15", "nqkva danna 29"],  
+                                  ["5/4/15" , 100, 42.5047926,  27.4626361, "4/4/15", "nqkva danna 30"] 
+                                ];*/
+                          
+                          
+                          /// --- comment was from here
+                          fillMap(result, map, dates);
+                          var d = dates[0].split('/'); // dates[0][0]
+                          controlText.innerHTML = d[0] + "." + d[1] + "." + d[2];
+                          
+                          setHeatmap(map,heatmap, heatmapdata[0]);
+                          heatmap.setMap(map);
+                          //clearMarkers();
+
+                  },
+                  error : function(msg, cause) {
+                      console.log(msg);
+                  }
+              });
+    
+ 
+        },
+        error : function(msg, cause) {
+			     console.log(msg);
+        }
+    });
+	
+    }
+  </script>
 
   </head>
   <body>
