--- a/water-flood-problem-server/views/service/index.ejs
+++ b/water-flood-problem-server/views/service/index.ejs
@@ -4,7 +4,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     
     <meta charset="utf-8">
-    <title>Water problem</title>
+    <title>Water mapping - Hack Bulgaria</title>
     <meta http-equiv="X-UA-Compatible" content="IE=11" />
     <style>
       html, body, #map-canvas {
@@ -13,138 +13,86 @@
         padding: 0px
       }
     </style>
-    <!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>-->
+    <!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>-->
     <script type="text/javascript"
-	     src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=false">
+       src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true" >
+     
       // true_or_false
     </script>
+  
+  <!--script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script-->
     
     <script type="text/javascript"
-      src="jquery-1.11.2.min.js">
+      src="https://code.jquery.com/jquery-2.1.3.min.js">
     </script>
 
 
     <script type = "text/javascript">
-	var markers = [];
-	var heatmapdata = [];
-	var dates = [];
-	var heatmap;
-	var ip = "";
-	var result = [];
-	var controlText;
-	var infowindows = [];
+  var markers = [];
+  var heatmapdata = [];
+  var dates = [];
+  var heatmap;
+  var ip = "";
+  var result = [];
+  var controlText;
+  var infowindows = [];
 
-  var GET_ALL_DATES_URL = 'http://192.168.1.2:1337/service/getAllDates';
-  var GET_ALL_MEASUREMENTS_URL = 'http://192.168.1.2:1337/service/getLatestMeasurements';
+  var GET_ALL_DATES_URL = 'http://localhost:1337/service/getAllDates';
+  var GET_ALL_MEASUREMENTS_URL = 'http://localhost:1337/service/getLatestMeasurements';
+  
+  function geolocator (map) {
+       
+   if(navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(function(position) {
+      var pos = new google.maps.LatLng(position.coords.latitude,
+                                       position.coords.longitude);
 
-function initialize() {
-	var mapOptions = {
-    zoom: 6,
-    center: new google.maps.LatLng(33.972093, -117.973952), // center maps
-  	mapTypeId: google.maps.MapTypeId.ROADMAP //HYBRID
-	};
-	var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+      var infowindow = new google.maps.InfoWindow({
+        map: map,
+        position: pos,
+        content: 'This is your location.'
+      });
 
-  console.log('jq', $);
-
-	
-	$.ajax({
-        url : GET_ALL_DATES_URL,
-        type : 'get',
-        //dataType : 'json',//or json
-		//data: 
-        //timeout : 5000,
-        cache : false,
-        //async : true,
-        success : function(data) { 
-          console.log('will ping server ', data);
-      			dates = data;       
-            /*dates =  [
-                  // requested date                         real date of measurement
-                    ["4/4/15"],  
-                    ["5/4/15"] 
-                  ];*/
-            
-            // TODO : colors
-            var gradient = [
-                'rgba(0, 255, 255, 0)',
-                'rgba(0, 255, 255, 1)',
-                'rgba(0, 191, 255, 1)',
-                'rgba(0, 127, 255, 1)',
-                'rgba(0, 63, 255, 1)',
-                'rgba(0, 0, 255, 1)',
-                'rgba(0, 0, 223, 1)',
-                'rgba(0, 0, 191, 1)',
-                'rgba(0, 0, 159, 1)',
-                'rgba(0, 0, 127, 1)',
-                'rgba(63, 0, 91, 1)',
-                'rgba(127, 0, 63, 1)',
-                'rgba(191, 0, 31, 1)',
-                'rgba(255, 0, 0, 1)'
-            ];
-            heatmap = new google.maps.visualization.HeatmapLayer({
-                gradient: gradient,
-                radius: 50,
-                maxIntensity: 100
-                //dissipating: false
-              });
-              
-              var slideBarControl = document.createElement('input');
-            
-              // var slideBar = new SlideBarControl(slideBarControl, map, dates);
-              new SlideBarControl(slideBarControl, map, dates);
-
-              slideBarControl.index = 1;
-              map.controls[google.maps.ControlPosition.BOTTOM_CENTER].push(slideBarControl);
-            
-              var textControlDiv = document.createElement('div');
-              var textControl = new TextControl(textControlDiv, map);
-            
-              textControlDiv.index = 2;
-              map.controls[google.maps.ControlPosition.BOTTOM_CENTER].push(textControlDiv);
-              
-              $.ajax({
-                  url : GET_ALL_MEASUREMENTS_URL,
-                  type : 'get',
-                  dataType : 'json',//or json
-              data: dates,
-                  //timeout : 5000,
-                  cache : false,
-                  //async : true,
-                  success : function(data) { 
-                          result = data; 
-                          // console.log('res from server', result);
-
-
-                            /*
-                            result =  [
-                                // requested date                         real date of measurement
-                                  ["4/4/15" , 100, 42.5047926,  27.4626361, "4/4/15", "nqkva danna 29"],  
-                                  ["5/4/15" , 100, 42.5047926,  27.4626361, "4/4/15", "nqkva danna 30"] 
-                                ];*/
-                          
-                          
-                          /// --- comment was from here
-                          fillMap(result, map, dates);
-                          var d = dates[0].split('/'); // dates[0][0]
-                          controlText.innerHTML = d[0] + "." + d[1] + "." + d[2];
-                          
-                          setHeatmap(map,heatmap, heatmapdata[0]);
-                          heatmap.setMap(map);
-                          //clearMarkers();
-
-                  },
-                  error : function(msg, cause) {
-                      console.log(msg);
-                  }
-              });
-    
- 
-        },
-        error : function(msg, cause) {
-			     console.log(msg);
-        }
+      map.setCenter(pos);
+    }, function() {
+      handleNoGeolocation(true,map);
     });
+  } else {
+    // Browser doesn't support Geolocation
+    handleNoGeolocation(false,map);
+  }
+  }
+
+
+function handleNoGeolocation(errorFlag,map) {
+  if (errorFlag) {
+    var content = 'Error: The Geolocation service failed.';
+  } else {
+    var content = 'Error: Your browser doesn\'t support geolocation.';
+  }
+
+ var options = {
+    map: map,
+    position: new google.maps.LatLng(80, 105),
+    content: content
+  };
+
+  var infowindow = new google.maps.InfoWindow(options);
+  map.setCenter(options.position);
+}
+var map;
+function initialize() {
+  var mapOptions = {
+    zoom: 10,
+    //center: new google.maps.LatLng(34.0522300 , -118.2436800), // center maps
+    mapTypeId: google.maps.MapTypeId.ROADMAP //HYBRID
+  };
+  map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+  
+  /////
+  
+  geolocator(map);
+
 }
 
 function SlideBarControl(slideBarControl, map, minMax) {
@@ -191,7 +139,7 @@ function SlideBarControl(slideBarControl, map, minMax) {
   /// --- comment was up to here
 
   google.maps.event.addDomListener(slideBarControl, 'input', function() {
-	  setHeatmap(map, heatmap, heatmapdata[slideBarControl.value]);
+    setHeatmap(map, heatmap, heatmapdata[slideBarControl.value]);
     var d = dates[slideBarControl.value].split('/');
     controlText.innerHTML = d[0] + "." + d[1] + "." + d[2];
   });
@@ -208,50 +156,48 @@ function fillMap(result, map, dates)
 
     // console.log('dates', dates);
     // console.log('result', result);
-	for(var j =0;j<dates.length;j++)
-	{
+  for(var j =0;j<dates.length;j++)
+  {
 
-		var arr = result.filter(function(elementFromServer){
+    var arr = result.filter(function(elementFromServer){
       var dateInElement = elementFromServer[0];
       var currentDate = dates[j];
-			return dateInElement === currentDate;
-		});
+      return dateInElement === currentDate;
+    });
 
-    
-		var heat = [];
+  var heat = [];
     for (var i=0; i<arr.length; i++) {
             
-    			if(j==0) // set marker only for the first date returned by the server
-    			{
+          if(j==0) // set marker only for the first date returned by the server
+          {
 
                 // lat and long from server
                 // arr[i] - represents measurement from i-th date 
-        				var point = new google.maps.LatLng(parseFloat(arr[i][2]),parseFloat(arr[i][3]));
-        				//var title = parts[0];
-        				
-        				var marker = new google.maps.Marker({
-        					position: point
-        					
-        					//title: 'Hello World!'
-        				});
-        				marker.setMap(map);
-        				markers.push(marker);
-        				var content = '<h2>' + arr[i][4] + '</h2><br />' + arr[i][5]; // title -4, next text 5
-        				var infowindow = new google.maps.InfoWindow({
-        				  content: content,
-                  // position: location,
-        			  });
+                var point = new google.maps.LatLng(parseFloat(arr[i][2]),parseFloat(arr[i][3]));
+                //var title = parts[0];
+                
+                var marker = new google.maps.Marker({
+                  position: point
+                  //title: location
+                });
+                marker.setMap(map);
+                markers.push(marker);
+                var content = '<h2>' + arr[i][4] + '</h2><br />' + arr[i][5]; // title -4, next text 5
+                var infowindow = new google.maps.InfoWindow({
+                  content: content,
+                         // position: location,
+                });
                 // console.log(content);
-        			  infowindows[i] = infowindow;
-        			  google.maps.event.addListener(marker, 'click', function(event) {
+                infowindows[i] = infowindow;
+                google.maps.event.addListener(marker, 'click', function(event) {
                   // infowindow is the last one
-        					
+                  
                   // console.log(event);
                   // console.log(event.latLng);
                   infowindow.open(map,marker);
 
-        			  });
-                // console.log(marker);
+                });
+                
 
 
 
@@ -274,30 +220,30 @@ function fillMap(result, map, dates)
 
 
 
-    				
-    			}
-    			//console.log(j + "-"+i);
-    			heat[i] = {
+            
+          }
+          //console.log(j + "-"+i);
+          heat[i] = {
                 location: new google.maps.LatLng(arr[i][2], arr[i][3]),
                 weight: arr[i][1]///50
           };
-    		  if(i==arr.length-1)
-      		{
-          			map.setCenter(point);
-          			map.setZoom(13);
-          }	
+          if(i==arr.length-1)
+          {
+                //map.setCenter(point);
+                map.setZoom(13);
+          } 
 
-	  }
-	  heatmapdata[j]=heat;
-	   //console.log(heatmapdata[j]);
-	}
-	  //alert(heatmapdata);
+    }
+    heatmapdata[j]=heat;
+     //console.log(heatmapdata[j]);
+  }
+    //alert(heatmapdata);
 }
 function setHeatmap(map, heatmap, _heatmapdata)
 {
-		//heatmap.setMap(null);
-		heatmap.setData(_heatmapdata);
-		//heatmap.setMap(map);
+    //heatmap.setMap(null);
+    heatmap.setData(_heatmapdata);
+    //heatmap.setMap(map);
 }
 // TODO remove this function
 function TextControl(controlDiv, map) {
@@ -333,6 +279,117 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
 
+  <button onclick = "setPins()" style="position:absolute; z-index:1;right: 30px; top: 100px; width: 100px; height: 100px;" >
+    <img src="pins2.png" />
+    view pins on map
+  </button>
+  
+  <button predict = "setSlideBar()" style="position:absolute; z-index:1;right: 30px; top: 240px; width: 100px; height: 100px;" >
+    <img src="predict.jpg" />
+    predict
+  </button>
+
+  <script>
+    function setPins() {
+    console.log("pins")
+    $.ajax({
+        url : GET_ALL_DATES_URL,
+        type : 'get',
+        //dataType : 'json',//or json
+    //data: 
+        //timeout : 5000,
+        //cache : false,
+        //async : true,
+        success : function(data) { 
+            dates = data;       
+          console.log(data);
+            /*dates =  [
+                  // requested date                         real date of measurement
+                    ["4/4/15"],  
+                    ["5/4/15"] 
+                  ];*/
+            
+        
+            // TODO : colors
+           var gradient = [
+
+    'rgba(255, 0, 0, 0)',
+    'rgba(255, 0, 0, 0.3)',
+    'rgba(255, 5, 0, 0.3)',
+    'rgba(255, 165, 0, 0.2)',
+    'rgba(255, 185, 15, 0.2)',
+    'rgba(0, 105, 255, 0.7)',
+    'rgba(0, 0, 255, 1)' 
+
+            ];
+            heatmap = new google.maps.visualization.HeatmapLayer({
+                gradient: gradient,
+          
+                radius: 80,
+                maxIntensity: 100
+                //dissipating: false
+              });
+        
+              
+              var slideBarControl = document.createElement('input');
+            
+              // var slideBar = new SlideBarControl(slideBarControl, map, dates);
+              new SlideBarControl(slideBarControl, map, dates);
+
+              slideBarControl.index = 1;
+              map.controls[google.maps.ControlPosition.BOTTOM_CENTER].push(slideBarControl);
+            
+              var textControlDiv = document.createElement('div');
+              var textControl = new TextControl(textControlDiv, map);
+            
+              textControlDiv.index = 2;
+              map.controls[google.maps.ControlPosition.BOTTOM_CENTER].push(textControlDiv);
+              
+              $.ajax({
+                  url : GET_ALL_MEASUREMENTS_URL + "?date=2015/03/23" ,
+                  type : 'get',
+                  dataType : 'json',//or json
+              data: dates,
+                  //timeout : 5000,
+                  //cache : false,
+                  //async : true,
+                  success : function(data) { 
+                          result = data; 
+                           console.log('res from server', result);
+
+
+                            /*
+                            result =  [
+                                // requested date                         real date of measurement
+                                  ["4/4/15" , 100, 42.5047926,  27.4626361, "4/4/15", "nqkva danna 29"],  
+                                  ["5/4/15" , 100, 42.5047926,  27.4626361, "4/4/15", "nqkva danna 30"] 
+                                ];*/
+                          
+                          
+                          /// --- comment was from here
+                          fillMap(result, map, dates);
+                          var d = dates[0].split('/'); // dates[0][0]
+                          controlText.innerHTML = d[0] + "." + d[1] + "." + d[2];
+                          
+                          setHeatmap(map,heatmap, heatmapdata[0]);
+                          heatmap.setMap(map);
+                          //clearMarkers();
+
+                  },
+                  error : function(msg, cause) {
+                      console.log(msg);
+                  }
+              });
+    
+ 
+        },
+        error : function(msg, cause) {
+           console.log(msg);
+        }
+    });
+  
+    }
+  </script>
 
   </head>
   <body>
